Finish About Page #39

--- a/View/StyleSheet.css
+++ b/View/StyleSheet.css
@@ -1,6 +1,7 @@
 body {
-    background-color:#D86000;
+    background-color:#000000;
     text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 }
 a {
     color:#ffffff;
