--- a/View/About.html
+++ b/View/About.html
@@ -3,56 +3,40 @@
     <head>
         <meta charset="utf-8" /> <!-- charset --> 
         <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- viewport --> 
-
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" /> <!-- Bootstrap CSS --> 
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS -->
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
         <link href="StyleSheet.css" rel="stylesheet">
 
         <title>FI320 Calculator</title>
     </head>
     <body>
-    <nav class="container-fluid" style = "font-size:50px; text-align: left;">
-        <div class="row" style = "border-bottom-style:solid; border-width: 5px; border-color: #000000; background-color: #a349a4;">
-            <div class="col-12 col-xs-12 col-md-6 col-lg-4">
-                <a href="About.html"> FI320 Calculator </a>
-            </div>
-            <div class="col-12 col-xs-12 col-md-6 col-lg-3">
-                <div class="dropdown">
-                    <button class="dropbtn">Time Value of Money</button>
-                    <div class="dropdown-content">
-                      <a href="#">Link 1</a>
-                      <a href="#">Link 2</a>
-                      <a href="#">Link 3</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-xs-12 col-lg-3">
-                
-            </div>
+    <div id="NavBar"></div>
+    <div class="row">
+        <div class="col-12 col-xs-0 cold-md-2 col-lg-0"></div>
+        <div class="col-12 col-xs-0 cold-md-8 col-lg-12">
+            <h1 style = "color: #ffffff; font-size:70px; font-weight: 750; margin-top: 40px; margin-bottom: 40px; margin-right: 40px; margin-left: 40px; border-style: solid; border-color:#a349a4; border-width:10px;">
+                Welcome to the FI320 Financial Calculator!
+            </h1>
         </div>
-    </nav>
+        <div class="col-12 col-xs-0 cold-md-2 col-lg-0"></div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-xs-0 cold-md-2 col-lg-3">
 
-        <h1 style = "color: #000000; font-size:50px; font-weight: 750; margin-top: 40px; margin-bottom: 40px;">
-            Welcome to Nick's Trivia!
-        </h1>
-        <div class="row">
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-3">
-
-            </div>
-            <div class="col-12 col-xs-0 cold-md-8 col-lg-6" style = "color: #000000; background-color: #D86000; font-size:40px; font-weight:550; font-family:'Times New Roman', Times, serif;
-            margin-top: 20px; border-style:solid; border-width:10px; border-color:#000000;">
-                Answer Trivia! <br> Earn a Score! <br> Who is the smartest of them all???
-            </div>
-            <div class="col-12 col-xs-0 cold-md-2 col-lg-3">
-
-            </div>
         </div>
-        <button style = "background-color: #FDBE0D; border-style:solid; border-width:10px; border-color:#000000; margin-top: 100px; 
-        font-size:50px;">
-            <a href="Quiz.html"> Press here to Start! </a>
-        </button>
+        <div class="col-12 col-xs-0 cold-md-8 col-lg-6" style = "color: #ffffff; background-color: #000000; font-size:60px; font-family:'Times New Roman', Times, serif;
+        margin-top: 20px; border-style:solid; border-width:10px; border-color:#a349a4;">
+            <p>About this site:</p>
+            <p style ="font-size:30px;">This site is designed to function as a calculator for finance problems from the class, FI320 Financial Management, 
+                taught by Dr. Lisa Fairchild at Loyola University Maryland.</p>
+        </div>
+        <div class="col-12 col-xs-0 cold-md-2 col-lg-3">
+
+        </div>
+    </div>
+
+    <script type = "text/javascript" src = NavBar.js></script>
     </body>
 </html>
 <!--In class note: On event, like on click, takes true or false and as an argument which decides if the action will happen or not-->
