--- a/View/FV.html
+++ b/View/FV.html
@@ -25,6 +25,14 @@
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
+                <label id = "rateLabel" for="rateInput" style="font-size: 40px; float: left;">Rate:</label>
+                <input type="number" step="0.01" class="form-control" id="rateInput" name="rateInput"></input>
+                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
                 <label id = "nperLabel" for="nperInput" style="font-size: 40px; float: left;">Payment Periods:</label>
                 <input type="number" step="0.01" class="form-control" id="nperInput" name="nperInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
@@ -33,7 +41,15 @@
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "pvLabel" for="pvInput" style="font-size: 40px; float: left;">Starting Amount:</label>
+                <label id = "pmtLabel" for="pmtInput" style="font-size: 39px; float: left;">Payment Amount per Period:</label>
+                <input type="number" step="0.01" class="form-control" id="pmtInput" name="pmtInput"></input>
+                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
+                <label id = "pvLabel" for="pvInput" style="font-size: 40px; float: left;">Present Value (Optional):</label>
                 <input type="number" step="0.01" class="form-control" id="pvInput" name="pvInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
@@ -41,20 +57,16 @@
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "intrestLabel" for="intrestInput" style="font-size: 40px; float: left;">Intrest Rate :</label>
-                <input type="number" step="0.01" class="form-control" id="intrestInput" name="intrestInput"></input>
-                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
+                <label id = "pmtMadeLabel" for="pmtMade" style="font-size: 40px; float: left;">When Payments are Made:</label>
+                <div class="dropdownForm" id="pmtMade" name="pmtMade">
+                    <button class="dropbtnForm" id="whenPayment" onclick="displayMenu()" type="button">At the end of the period ▽</button>
+                    <div class="dropdown-contentForm" id="menu" type="button" style = "border-style: solid; border-top-style: none; border-width: 5px; border-color: #a349a4;">
+                        <a href="javascript:void(0)" id="optionwhen" type="button" onclick="switchOption()">At the beginning of the period</a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "pmtLabel" for="pmtInput" style="font-size: 40px; float: left;">Periodic Deposit :</label>
-                <input type="number" step="0.01" class="form-control" id="pmtInput" name="pmtInput"></input>
-                <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
-            </div>
         </div>
-        
         <div class="row">
             <div class="col-12 col-xs-1 col-s-1 col-lg-4"></div>
             <div class="col-12 col-xs-1 col-s-1 col-md-4 col-lg-4" style = "font-size:25px; font-weight: 750;">
@@ -75,11 +87,27 @@
     </div>
 
     <script type = "text/javascript" src = NavBar.js></script>
+    <script>let exports = {};</script>
     <script type = "text/javascript" src = Calculations.js></script>
     <script type = "text/javascript">
         let option = 0;
         let display = 0;
         
+        function switchOption(){
+            if(option === 0){
+                option = 1;
+                document.getElementById('whenPayment').innerHTML = "At the beginning of the period ▽";
+                document.getElementById('optionwhen').innerHTML = "At the end of the period";
+                document.getElementById('menu').style.display = "none";
+                display = 0;
+            }else{
+                option = 0;
+                document.getElementById('whenPayment').innerHTML = "At the end of the period ▽";
+                document.getElementById('optionwhen').innerHTML = "At the beginning of the period";
+                document.getElementById('menu').style.display = "none";
+                display = 0;
+            }
+        }
         function displayMenu(){
             if(display === 0){
                 document.getElementById('menu').style.display = "block";
@@ -91,12 +119,11 @@
 
         }
         function calculate(){
+             let rate = document.getElementById("rateInput").value;
             let nper = document.getElementById("nperInput").value;
-            let pv = document.getElementById("pvInput").value;
-            let rate = document.getElementById("intrestInput").value;
             let pmt = document.getElementById("pmtInput").value;
-
-            document.getElementById('answer').innerHTML = FV(nper, pv, rate, pmt);
+            let pv = document.getElementById("pvInput").value;
+            document.getElementById('answer').innerHTML = FV(rate, nper, pmt, pv, option);
             document.getElementById('answer').style.color = "#ffffff";
         }
     </script>
