--- a/View/About.html
+++ b/View/About.html
@@ -11,7 +11,9 @@
         <title>FI320 Calculator</title>
     </head>
     <body>
-    <div id="NavBar"></div>
+    <div id="NavBar">
+    </div>
+    
     <div class="row">
         <div class="col-12 col-xs-0 cold-md-2 col-lg-0"></div>
         <div class="col-12 col-xs-0 cold-md-8 col-lg-12">
@@ -36,7 +38,7 @@
         </div>
     </div>
 
-    <script type = "text/javascript" src = NavBar.js></script>
+    <script type = "text/javascript" src = NavBar.js> </script>
     </body>
 </html>
 <!--In class note: On event, like on click, takes true or false and as an argument which decides if the action will happen or not-->
