--- a/View/profile.html
+++ b/View/profile.html
@@ -26,14 +26,15 @@
     <div class="row">
         
             <div class="col-12 col-xs-0 cold-md-2 col-lg-0"></div>
-            <div class="col-12 col-xs-0 cold-md-8 col-lg-12">
+            <div class="col-12 col-xs-0 cold-md-8 col-lg-12">   
                 <h1 style = "color: #ffffff; font-size:70px; font-weight: 750; margin-top: 40px; margin-bottom: 40px; margin-right: 40px; margin-left: 40px; border-style: solid; border-color:#a349a4; border-width:10px;">
                     history
                 </h1>
-                
-            <button style="background-color: #a349a4;color: rgb(255, 255, 255);height: 50px; width: 200px; margin-top: 10px;">
-                <a href="About.html" onclick=""> log out </a>
-            </button>
+                <form id ="logout"method="get"action="/logout">    
+                    <button style="background-color: #a349a4;color: rgb(255, 255, 255);height: 50px; width: 200px; margin-top: 10px;">
+                        <a href="About.html" onclick=""> log out </a>
+                    </button>
+                </form>
             </div>
         <div class="col-12 col-xs-0 cold-md-2 col-lg-0"></div>
         
@@ -41,7 +42,7 @@
     </div>
     
 
-    <script type = "text/javascript" src = NavBar2.js>
+    <script type = "text/javascript" src = NavBar.js>
 
         
     </script>
