--- a/View/PV.html
+++ b/View/PV.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             <div class="col-12 col-xs-12 col-md-12 col-lg-4" style = "font-size:25px; font-weight: 750;">
-                <label id = "pmtLabel" for="pmtInput" style="font-size: 40px; float: left;">Payments:</label>
+                <label id = "pmtLabel" for="pmtInput" style="font-size: 39px; float: left;">Payment Amount per Period:</label>
                 <input type="number" step="0.01" class="form-control" id="pmtInput" name="pmtInput"></input>
                 <div class="col-12 col-xs-0 cold-md-2 col-lg-4"></div>
             </div>
@@ -87,6 +87,7 @@
     </div>
 
     <script type = "text/javascript" src = NavBar.js></script>
+    <script>let exports = {};</script>
     <script type = "text/javascript" src = Calculations.js></script>
     <script type = "text/javascript">
         let option = 0;
@@ -121,7 +122,7 @@
             let nper = document.getElementById("nperInput").value;
             let pmt = document.getElementById("pmtInput").value;
             let fv = document.getElementById("fvInput").value;
-            document.getElementById('answer').innerHTML = PV(rate, nper, pmt, fv, option);
+            document.getElementById('answer').innerHTML = exports.PV(rate, nper, pmt, fv, option);
             document.getElementById('answer').style.color = "#ffffff";
         }
     </script>
