Fix minor mistake #12

--- a/View/BondPrice.html
+++ b/View/BondPrice.html
@@ -106,7 +106,7 @@
             display = 0;
             
             //Check which option was chosen and update the variable
-            let options = ["Annually ▽", "Semiannually ▽", "Quarterly ▽", "Monthly"]
+            let options = ["Annually ▽", "Semiannually ▽", "Quarterly ▽", "Monthly ▽"]
             for(let i = 0; i < options.length; i++){
                 if (optionWhen === options[i]){
                     option = i;
